[gd_scene load_steps=12 format=2]

[ext_resource path="res://scenes/components/interaction_helper.gd" type="Script" id=1]
[ext_resource path="res://addons/godot_helper_pack/core/3d/outline_helper_3d.gd" type="Script" id=2]
[ext_resource path="res://assets/sounds/sfx_base_repairs_interaction_start_loop_jdymusic.mp3" type="AudioStream" id=3]
[ext_resource path="res://scenes/destructables/destructable_base.gd" type="Script" id=4]
[ext_resource path="res://addons/godot_helper_pack/core/audio/random_audio_stream_player_3d.gd" type="Script" id=5]
[ext_resource path="res://scenes/ui/components/interaction_progress_bar_3d.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/destructables/enemy_agression_change_trigger.tscn" type="PackedScene" id=7]

[sub_resource type="BoxShape" id=1]

[sub_resource type="Shader" id=9]
code = "shader_type spatial;

render_mode unshaded, shadows_disabled, depth_test_disable;

uniform vec4 background_color : hint_color = vec4(.0, .0, .0, 1.);
uniform vec4 progress_color : hint_color = vec4(.0, 1., .0, 1.);
uniform float progress_value : hint_range(0.0, 1.0, 0.02) = .5;

void vertex()
{
	MODELVIEW_MATRIX = INV_CAMERA_MATRIX * mat4(CAMERA_MATRIX[0],CAMERA_MATRIX[1],CAMERA_MATRIX[2],WORLD_MATRIX[3]);
}

void fragment()
{
	vec2 border = vec2(0.01, 0.1);

	vec2 mask2 = step(border, UV) * step(UV, 1.0-border);
    float mask = mask2.x*mask2.y;

	//float progress = .5;
    float blend = ((UV.x - progress_value) <= 0.0 ? 1.0 : 0.0) * mask;
    vec4 fragColor = progress_color*blend + background_color*(1.0-blend);
	ALBEDO = fragColor.rgb;

}"

[sub_resource type="ShaderMaterial" id=12]
render_priority = 5
shader = SubResource( 9 )
shader_param/background_color = Color( 0, 0, 0, 1 )
shader_param/progress_color = Color( 0, 1, 0, 1 )
shader_param/progress_value = 1.0

[sub_resource type="QuadMesh" id=11]
resource_local_to_scene = true
material = SubResource( 12 )
size = Vector2( 1, 0.1 )

[node name="DestructableBase" type="StaticBody"]
collision_layer = 67
collision_mask = 0
script = ExtResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="OutlineHelper3D" type="Node" parent="."]
script = ExtResource( 2 )
select_on_click = false
button_index = 2
mouse_over_color = Color( 1, 0.631373, 0, 1 )

[node name="InteractionHelper" type="Node" parent="."]
script = ExtResource( 1 )
outline_helper = NodePath("../OutlineHelper3D")
interaction_progress_bar = NodePath("../HealthBar")
interactable_type = "destructable"
interaction_start_sound = NodePath("../RapairingSound")
complete_after_complete_sound_finished = false
required_resource_type = "wood"
required_resource_amount = 100

[node name="DamagedRandomAudioStreamPlayer3D" type="Spatial" parent="."]
script = ExtResource( 5 )

[node name="HealthBar" parent="." instance=ExtResource( 6 )]
mesh = SubResource( 11 )
value = 100.0
background_color = Color( 0, 0, 0, 1 )
progress_color = Color( 0, 1, 0, 1 )
reset_on_complete = false
speed_regain_on_active_spell = 1.0

[node name="RapairingSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 3 )
unit_db = 12.0
bus = "SoundFx"

[node name="EnemyAgressionChangeArea" parent="." instance=ExtResource( 7 )]

[connection signal="interaction_completed" from="InteractionHelper" to="." method="_on_InteractionHelper_interaction_completed"]
[connection signal="interaction_interrupted" from="InteractionHelper" to="." method="_on_InteractionHelper_interaction_interrupted"]
[connection signal="interaction_started" from="InteractionHelper" to="." method="_on_InteractionHelper_interaction_started"]
[connection signal="completed" from="HealthBar" to="." method="_on_HealthBar_completed"]
[connection signal="progress_made" from="HealthBar" to="." method="_on_HealthBar_progress_made"]
[connection signal="value_changed" from="HealthBar" to="." method="_on_HealthBar_value_changed"]
